--- a/src/components/NavbarStyles.css
+++ b/src/components/NavbarStyles.css
@@ -1,17 +1,10 @@
-.back{
-    width: 100%;
-    height: 100vh;
-    background: rgb(186, 199, 255);
-    background: linear-gradient(90deg, rgba(186, 199, 255, 1) 0%, rgba(125, 74, 177, 1) 100%);
-}
-
 .NavbarItems{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 30px;
-    background-color: #222;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
+    background-color: #fff;
+    box-shadow: 0 5px 15px rgba(180, 180, 180, 0.179);
     width: 95%;
     height: 80px;
     border-radius: 13px;
@@ -22,9 +15,10 @@
 }
 
 .logo{
-    color: #fff;
+    color: rgb(151, 126, 195);
     justify-self: start;
     cursor: pointer;
+    font-size: 1.5rem;
 }
 
 .fa-react{
@@ -45,7 +39,7 @@
 
 .nav-links{
     text-decoration: none;
-    color: #fff;
+    color: #525050;
     padding: 0.7rem 1rem;
     white-space: nowrap;
 }
@@ -55,14 +49,14 @@
 }
 
 .nav-links:hover{
-    background: rgb(80, 80, 238);
+    background: rgb(163, 163, 202);
     border-radius: 4px;
     transition: all 0.2s ease-in-out;
 }
 
 .fa-bars,
 .fa-times{
-    color: #fff;
+    color: #8052ab;
 }
 
 .menu-icons{
@@ -72,11 +66,11 @@
 .nav-links-mobile{
     padding: 0.5rem 1rem;
     white-space: nowrap;
-    background-color: #fafafa;
-    border-radius: 3px;
+    background-color: #8052ab;
+    border-radius: 10px;
     text-decoration: none;
-    font-size: 1.1rem;
-    color: #222;
+    font-size: 1rem;
+    color: #fff;
     font-weight: 500;
 }
 
@@ -112,7 +106,7 @@
             display: block;
             widows: 100%;
             padding: 2rem 0;
-            color: #222;
+            color: #525050;
         }
 
         .nav-links:hover{
