--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
 
   color-scheme: light dark;
   color: rgba(0, 0, 0, 0.87);
-  background-color: #D9D3E0;
+  background: rgb(186, 199, 255);
+  background: linear-gradient(90deg, rgba(186, 199, 255, 1) 0%, rgba(125, 74, 177, 1) 100%);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -31,6 +32,7 @@ body {
 
 
 button {
+  width: 40%;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -42,7 +44,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #464bb6;
 }
 button:focus,
 button:focus-visible {
@@ -55,7 +57,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #a2a4ce;
   }
   button {
     background-color: #f9f9f9;
